слайд про сериализацию событий git push

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<section>
 					<h2>План</h2>
                                         <ol>
-                                          <li>Актор — асинхронный объект. <!-- Сериализация событий при помощи акторов.--></li>
+                                          <li>Актор — асинхронный объект.</li>
 					  <li class="fragment">Диспетчеры. <!-- Разделение акторов по подсистемам.--></li>
 					  <li class="fragment">Обработка исключительных ситуаций.<!-- Иерархия супервизоров и стратегии обработки.
 					  Death pact и Death watch.--></li>
@@ -66,9 +66,6 @@
 								<th></th><th>Объект</th> <th>Актор</th>
 							</tr>
 
-							<tr>
-								<td>Приватное состояние</td><td>+</td><td>+</td>
-							</tr>
 							<tr class="fragment">
 								<td>Вызов</td>
 								<td>counter.incr(n)</td>
@@ -84,6 +81,10 @@
 								<td>есть</td>
 								<td>нет</td>
 							</tr>
+							<tr class="fragment">
+								<td>Изменяемые аргументы</td>
+								<td>возможны</td>
+								<td>невозможны</td>
 						</thead>
 					</table>
 				</section>
@@ -127,6 +128,16 @@ object Main extends App {
 					</pre>
 				</section>
 
+				<section>
+					<p>Актор может работать со своим состоянием без синхронизации (прием сообщений
+					строго последовательный). Это свойство можно использовать для сериализации
+					операций над внешним миром, например:</p>
+					<ul>
+						<li>Чтение из RandomAccessFile (seek/read). 
+						<li>Обработка данных одного пользователя, хранящихся в внешнем
+						    хранилище (возможно не поддерживающем транзакций).
+					</ul>
+				</section>
 
 			</div>
 
