слайд про диспетчеры

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ object Main extends App {
 				</section>
 
 				<section>
-					<p>Актор может работать со своим состоянием без синхронизации (прием сообщений
-					строго последовательный). Это свойство можно использовать для сериализации
+					<p>Приватное состояние без синхронизации (обработка сообщений
+					строго последовательная). Сериализация
 					операций над внешним миром, например:</p>
 					<ul>
 						<li>Чтение из RandomAccessFile (seek/read). 
@@ -139,6 +139,33 @@ object Main extends App {
 					</ul>
 				</section>
 
+				<section>
+					<h2>Диспетчеры</h2>
+					<ul>
+						<li>Runtime для акторов</li>
+						<li>Работают поверх Executor'ов</li>
+						<li>Рабочие треды — разделяемый ресурс</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Диспетчеры - проблемы</h2>
+					<ul>
+						<li>Не все акторы одинаковы</li>
+						<li>Акторы с долгими задачами могут занять все треды</li>
+						<li>Акторы с большим количеством сообщений занимают диспетчер</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Диспетчеры под задачи</h2>
+					<ul>
+						<li>Интерактивные задачи vs фоновая пакетная обработка
+						<li class="fragment">Блокирующиеся вызовы (JDBC, файловый ввод-вывод, вычисления на CPU)
+						<li class="fragment">Свой «отсек» на каждую подсистему (bulkheading)
+						<li class="fragment">Своя JVM и свой сервер на каждую подсистемы (Akka Remote / Cluster)
+					</ul>
+					<p class="fragment">Факт: «Титаник» утонул из-за плохого разделения на отсеки.</p>
 			</div>
 
 		</div>
