--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@ object Main extends App {
 				</section>
 
 				<section>
-					<p>Приватное состояние без синхронизации (обработка сообщений
-					строго последовательная). Сериализация
+					<p>Приватное состояние без синхронизации.
+					Сериализация
 					операций над внешним миром, например:</p>
 					<ul>
 						<li>Чтение из RandomAccessFile (seek/read). 
 						<li>Обработка данных одного пользователя, хранящихся в внешнем
-						    хранилище (возможно не поддерживающем транзакций).
+						    хранилище без транзакций.
 					</ul>
 				</section>
 
@@ -153,17 +153,17 @@ object Main extends App {
 					<ul>
 						<li>Не все акторы одинаковы</li>
 						<li>Акторы с долгими задачами могут занять все треды</li>
-						<li>Акторы с большим количеством сообщений занимают диспетчер</li>
+						<li>Диалоги с большим количеством сообщений занимают диспетчер</li>
 					</ul>
 				</section>
 
 				<section>
 					<h2>Диспетчеры под задачи</h2>
 					<ul>
-						<li>Интерактивные задачи vs фоновая пакетная обработка
-						<li class="fragment">Блокирующиеся вызовы (JDBC, файловый ввод-вывод, вычисления на CPU)
-						<li class="fragment">Свой «отсек» на каждую подсистему (bulkheading)
-						<li class="fragment">Своя JVM и свой сервер на каждую подсистемы (Akka Remote / Cluster)
+						<li>Интерактивные задачи vs фоновая пакетная обработка.
+						<li class="fragment">Блокирующиеся вызовы (JDBC, файловый ввод-вывод, вычисления на CPU).
+						<li class="fragment">Свой «отсек» на каждую подсистему (bulkheading).
+						<li class="fragment">Своя JVM и свой сервер на каждую подсистемы (Akka Remote / Cluster).
 					</ul>
 					<p class="fragment">Факт: «Титаник» утонул из-за плохого разделения на отсеки.</p>
 			</div>
