--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 					  <li class="fragment">Регулировка скорости обработки.</li>
 					  <li class="fragment">Коротко что еще есть в Akka: роутеры, IO/HTTP, Persistence, Cluster, Reactive Streams.</li>
 					  <li class="fragment">Проблемы.</li>
+					  <li class="fragment">Вопросы.</li>
 					</ol>
 				</section>
 
@@ -282,12 +283,12 @@ context.watch(anotherActorRef)
 				<section>
 					<h2>Что еще есть в Akka</h2>
 					<ul>
-					<li class="fragment">Роутеры – распределение задач по пулу акторов.
-					<li class="fragment">IO – актор API к Java NIO, аналог Netty.
-					<li class="fragment">HTTP – отдельная библиотека Spray; Akka-http в будущем.
-					<li class="fragment">Persistence - сохранение состояния акторов в СУБД. Event log, snapshot'ы и eventual consistency.
+					<li>Роутеры – распределение задач по пулу акторов.
 					<li class="fragment">Reactive streams - поточная обработка данных с back pressure. Удобный DSL; не только Akka
-					<li class="fragment">Cluster - распределенные приложения на Akka</li>
+					<li class="fragment">IO – API к Java NIO, аналог Netty.
+					<li class="fragment">HTTP – отдельная библиотека Spray; Akka-http в будущем.
+					<li class="fragment">Persistence – сохранение состояния акторов в СУБД. Event log, snapshot'ы и eventual consistency.
+					<li class="fragment">Cluster – распределенные приложения на Akka</li>
 					</ul>
 				</section>
 
