--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@ object Main extends App {
 				<section>
 					<h3>Стратегии супервизора</h3>
 					<ul>
-						<li><strong>Restart</strong> – незаметный перезапуск.
-						<li class="fragment"><strong>Stop</strong> – остановка.
-						<li class="fragment"><strong>Escalate</strong> – обрушивает супервизор.
+						<li><strong>Restart</strong> — незаметный перезапуск.
+						<li class="fragment"><strong>Stop</strong> — остановка.
+						<li class="fragment"><strong>Escalate</strong> — обрушивает супервизор.
 					</ul>
 				</section>
 
