--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@ object Main extends App {
 				</section>
 
 				<section>
-					<p>Разделяемое изменяемое состояние + параллельность = проблемы<p>
+					<p>Разделяемое изменяемое состояние + параллелизм = проблемы<p>
 					<div class="fragment">
-					<p><s>Разделяемое</s> изменяемое состояние + параллельность = 
+					<p><s>Разделяемое</s> изменяемое состояние + параллелизм = 
 					«Share nothing» архитектура</p>
 					</div>
 				</section>
