--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@ context.watch(anotherActorRef)
 						<li>Динамическое ООП в строготипизированном ФП.
 						<li class="fragment">Нет готовых средств мониторинга. Отладка/диагностика может быть сложна.
 						<li class="fragment">Смесь бизнес-логики и механизмов flow control.
+						<li class="fragment">Логирование.
 					</ul>
 				</section>
 
