еще пара слайдов о которых стоило бы рассказать

--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@ object Main extends App {
 				</section>
 
 				<section>
+					<h3>Location transparency</h3>
+					<ul>
+						<li>Классический RPC — удаленные вызовы подобны локальным
+						<li>Акторы — локальные «вызовы» подобны удаленным
+					</ul>
+				</section>
+
+
+				<section>
 					<h2>Диспетчеры</h2>
 					<ul>
 						<li>Runtime для акторов</li>
@@ -226,6 +235,20 @@ override val supervisorStrategy =
 						</code>
 					</pre>
 				</section>
+
+				<section>
+					<h3>Пример: персистентный актор</h3>
+					<ul>
+						<li>Актор соответствует некоторому объекту в БД
+						<li>При старте (и рестарте) состояние загружается из БД
+						<li>Команды меняют состояние в памяти и в БД
+					</ul>
+					<p>
+						При падении теряется команда на которой упали. Состояние безопасно
+						хранится в БД.
+					</p>
+				</section>
+
 
 				<section>
 					<h3>Death pact &amp; death watch</h3>
