--- a/index.html
+++ b/index.html
@@ -265,7 +265,38 @@ context.watch(anotherActorRef)
 				</section>
 
 				<section>
-					<p>Сбой доставки нельзя детектировать.<p>
+					<h2>Сказка о транзакциях</h2>
+					<ul>
+						<li>Транзакции спасут не только БД, но и нас
+						<li>Двухфазный коммит спасёт вообще всех
+						<li>Протокол двухфазного коммити кофемашины и СУБД
+					</ul>
+				</section>
+
+				<section>
+					<p>Что значит ошибка сети или таймаут?</p>
+					<ul>
+						<li class="fragment">Транзакция не прошла
+						<li class="fragment">Транзакция прошла, но не прошло подтверждение
+						<li class="fragment">Процесс еще не окончен
+					</ul>
+				</section>
+
+				<section>
+					<p>Решение проблемы</p>
+					<ul>
+						<li>Сбои допустимы
+						<li class="fragment">Журналы у всех участников операции, процедуры сверки операций и другие
+							механизмы компенсации сбоев
+						<li class="fragment">Система не консистентна пока идут операции; каждая операция
+							консистентна только в конечном счете
+						<li class="fragment">Блокировок нет
+					</ul>
+
+				<section>
+					<h2>Вернемся к Akka</h2>
+					<p>Сбой нельзя детектировать.<p>
+					<p>Сбой и таймаут не отличимы.</p>
 					<p class="fragment">Решение: протоколы с подтверждением успеха обработки.<p>
 					<p class="fragment">Результат: подтвержденный успех или timeout.</p>
 					<p class="fragment">Каждое сообщение должно иметь unique id (например UUID).
